# rdxl

./: Cargo.toml  README.md
.github/workflows/: buildnightly.yml  main.yml
book_src/: Makefile  book.toml
book_src/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md
docs/: chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  index.html  print.html  searchindex.js  searchindex.json
examples/: attr.rs  class_as_attr.rs  class_attr.rs  classes.rs  cond.rs  context.rs  formatter.rs  loops.rs  misc.rs  simple.rs  tags.rs  vars.rs
src/: lib.rs  profile_runtime.rs  xhtml.rs  xrender.rs  xtext.rs  xtextrender.rs  xtype.rs
tests/: attr.rs  breaking_spaces.rs  class_as_attr.rs  class_attr.rs  class_defaults.rs  classes.rs  comments.rs  cond.rs  context.rs  display.rs  expr_attr.rs  formatter.rs  ghost_spaces.rs  keywords.rs  loops.rs  misc.rs  simple.rs  static.rs  tags.rs  vars.rs
