[package]
name = "rdxl"
version = "0.5.26"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Macros and Component System for HTML Templating"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl"
documentation = "https://docs.rs/rdxl/"
keywords = ["xml","html","templating","library","web-components"]

[lib]
proc-macro = true

[dependencies]
rdxl_internals = "0.0.10"
quote = "1.0"
proc-macro2 = { version="1.0", features=["span-locations"] }

[dependencies.syn]
version = "1.0"
features = ["full"]

[[bin]]
name = "profile_runtime"
path = "src/profile_runtime.rs"
